Fix favorite header vertical-align at A4A

--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -386,6 +386,10 @@
 		color: var(--color-accent-80);
 	}
 
+	tr.dataviews-view-table__row th[data-field-id="favorite"] svg {
+		vertical-align: middle;
+	}
+
 	tr.dataviews-view-table__row {
 		&:hover {
 			.site-set-favorite__favorite-icon {
