--- a/client/components/dataviews/style.scss
+++ b/client/components/dataviews/style.scss
@@ -119,7 +119,7 @@
 		svg {
 			&:not(:last-child) {
 				margin-right: 4px;
-				vertical-align: inherit;
+				vertical-align: middle;
 			}
 		}
 
